fixed poster image alignment on popup

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,6 +57,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  align-items: flex-start; /* Align items to the top */
 }
 
 .popup-details img {
